yt-dlp-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-dlp-ui
  namespace: yt-dlp-ui
spec:
  selector:
    app: yt-dlp-ui
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
